--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,25 @@
     android:id="@+id/layout"
     tools:context=".MainActivity">
 
-    <com.bitvale.lightprogress.LightProgress
-        android:id="@+id/lightTextBike"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="100dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="110dp"
+        android:fontFamily="@font/aclonica"
+        android:padding="55dp"
         android:text="Bike Tracker"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/colorPrimaryTitleColorNight"
-        android:textSize="40dp"
+        android:textColor="@color/colorPrimaryDarkNight"
+        android:textSize="36sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageBike"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:src="@drawable/bikedet" />
-
 
 
 </FrameLayout>
