--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,161 +8,285 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linerName"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="35dp">-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/name"-->
+<!--            android:textSize="20sp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:textStyle="bold" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textViewName"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="0"-->
+<!--            android:layout_weight="2"-->
+<!--            android:textSize="20sp" />-->
+<!--    </LinearLayout>-->
+
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="2px"-->
+<!--        android:background="#aaa"-->
+<!--        android:padding="15dp"/>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="35dp"-->
+<!--        android:id="@+id/linerAge">-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="@string/age"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:layout_weight="2"-->
+<!--            android:id="@+id/textViewAge"-->
+<!--            android:text="0"/>-->
+<!--    </LinearLayout>-->
+<!--    <View-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="2px"-->
+<!--        android:background="#aaa"/>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="35dp"-->
+<!--        android:id="@+id/liner">-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/sex"-->
+<!--            android:layout_weight="1"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:layout_weight="2"-->
+<!--            android:id="@+id/textViewSex"-->
+<!--            android:text="@string/male"/>-->
+<!--    </LinearLayout>-->
+<!--    <View-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="2px"-->
+<!--        android:background="#aaa"/>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="35dp"-->
+<!--        android:id="@+id/linerWeight">-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="@string/weight"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="2"-->
+<!--            android:textSize="20sp"-->
+<!--            android:id="@+id/textViewWeight"-->
+<!--            android:text="0,0"/>-->
+<!--    </LinearLayout>-->
+<!--    <View-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="2px"-->
+<!--        android:background="#aaa"/>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="35dp"-->
+<!--        android:id="@+id/linerHeight">-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:textStyle="bold"-->
+<!--            android:text="@string/height"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:layout_weight="2"-->
+<!--            android:id="@+id/textViewHeight"-->
+<!--            android:text="0"/>-->
+
+<!--    </LinearLayout>-->
+<!--    <View-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="2px"-->
+<!--        android:background="#aaa"/>-->
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="35dp"-->
+<!--        android:id="@+id/linerBike">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/bike"-->
+<!--            android:layout_weight="1"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:layout_weight="2"-->
+<!--            android:id="@+id/textViewBike"-->
+<!--            android:text="@string/city_bicycle"/>-->
+<!--    </LinearLayout>-->
+<!--    <View-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="2px"-->
+<!--        android:background="#aaa"/>-->
     <LinearLayout
-        android:id="@+id/linerName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="35dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:textStyle="bold" />
+        android:weightSum="3">
 
         <TextView
-            android:id="@+id/textViewName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:layout_weight="2"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:text="First Name"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:background="#aaa"
-        android:padding="15dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="35dp"
-        android:id="@+id/linerAge">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:text="@string/age"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
+        <EditText
+            android:id="@+id/firstNameEditText"
+            android:hint="First Name"
             android:layout_weight="2"
-            android:id="@+id/textViewAge"
-            android:text="0"/>
-    </LinearLayout>
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2px"
-        android:background="#aaa"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="35dp"
-        android:id="@+id/linerSex">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/sex"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_weight="2"
-            android:id="@+id/textViewSex"
-            android:text="@string/male"/>
-    </LinearLayout>
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2px"
-        android:background="#aaa"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="35dp"
-        android:id="@+id/linerWeight">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:text="@string/weight"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textSize="20sp"
-            android:id="@+id/textViewWeight"
-            android:text="0,0"/>
-    </LinearLayout>
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2px"
-        android:background="#aaa"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="35dp"
-        android:id="@+id/linerHeight">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:textStyle="bold"
-            android:text="@string/height"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_weight="2"
-            android:id="@+id/textViewHeight"
-            android:text="0"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2px"
-        android:background="#aaa"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="35dp"
-        android:id="@+id/linerBike">
+        android:weightSum="3">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/bike"
+            android:text="Age"
             android:layout_weight="1"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/ageEditText"
+            android:hint="Age"
             android:layout_weight="2"
-            android:id="@+id/textViewBike"
-            android:text="@string/city_bicycle"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2px"
-        android:background="#aaa"/>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <TextView
+            android:text="Gender"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/genderSpinner"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <TextView
+            android:text="Weight"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/weightEditText"
+            android:hint="Weight"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <TextView
+            android:text="Height"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/heightEditText"
+            android:hint="Height"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <TextView
+            android:text="Bike"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/bikeSpinner"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
